--- a/an2/Semestrul2/Web/Lab1/Tema/html5.html
+++ b/an2/Semestrul2/Web/Lab1/Tema/html5.html
@@ -184,6 +184,12 @@
         </div>
     </div>
 
+    <audio controls>
+        <source src="cat-meow-14536.mp3" type="audio/ogg">
+        <source src="cat-meow-14536.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+
 </body>
 
 </html>
