--- a/an2/Semestrul2/Web/Lab1/Tema/html4.html
+++ b/an2/Semestrul2/Web/Lab1/Tema/html4.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-        "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+    "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 
 <head>
@@ -7,66 +7,70 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
-<body style="background-color:#99d6ff">
-    <h1 style="text-align: center;  color: #a202ff"> <b> Formular </b> </h1>
+<body bgcolor="#99d6ff">
+    <center>
+        <h1> <b>
+            <font color="#a202ff">
+                Formular 
+            </font>
+        </b> </h1>
+    </center>
     <div>
-        <div style="margin: auto;">
-            <textarea style="border: 5px solid; text-align: center;  color: #a202ff" rows="7" cols="100" readonly>
-            The .NET Framework (pronounced as "dot net") is a proprietary software framework developed by Microsoft that runs primarily on Microsoft Windows. It was the predominant implementation of the Common Language Infrastructure (CLI) until being superseded by the cross-platform .NET project. It includes a large class library called Framework Class Library (FCL) and provides language interoperability (each language can use code written in other languages) across several programming languages.
+        <div>
+            <textarea rows="7" cols="100" readonly>
+                        The .NET Framework (pronounced as "dot net") is a proprietary software framework developed by Microsoft that runs primarily on Microsoft Windows. It was the predominant implementation of the Common Language Infrastructure (CLI) until being superseded by the cross-platform .NET project. It includes a large class library called Framework Class Library (FCL) and provides language interoperability (each language can use code written in other languages) across several programming languages.
             </textarea>
         </div>
         <table border="1">
-            <tr style="border: 1px solid black; background-color: blanchedalmond;">
-                <th style="border: 1px solid black;" colspan="4">Pachet</th>
-            </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon" colspan="2">Nume</th>
-                <td style="border: 1px solid black;" colspan="2"> <input type="text"> </td>
-            </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon">Email</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Varsta</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
-            </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon">Oras Plecare</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Ora Plecare</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
-            </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon">Oras Destinatie</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Ora Aterizare</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
+            <tr bgcolor="blanchedalmond">
+                <th colspan="4">Pachet</th>
             </tr>
             <tr>
-                <th style="border: 1px solid black; background-color:darksalmon">Ce fel de rezervare</th>
+                <th bgcolor="darksalmon" colspan="2">Nume</th>
+                <td colspan="2"> <input type="text"> </td>
+            </tr>
+            <tr>
+                <th bgcolor="darksalmon">Email</th>
+                <td> <input type="text" maxlength="15"> </td>
+                <th bgcolor="darksalmon">Varsta</th>
+                <td> <input type="text"> </td>
+            </tr>
+            <tr>
+                <th bgcolor="darksalmon">Oras Plecare</th>
+                <td> <input type="text"> </td>
+                <th bgcolor="darksalmon">Ora Plecare</th>
+                <td> <input type="text"> </td>
+            </tr>
+            <tr>
+                <th bgcolor="darksalmon">Oras Destinatie</th>
+                <td> <input type="text"> </td>
+                <th bgcolor="darksalmon">Ora Aterizare</th>
+                <td> <input type="text"> </td>
+            </tr>
+            <tr>
+                <th bgcolor="darksalmon">Ce fel de rezervare</th>
                 <td>
                     <select>
                         <option>Default</option>
-                        <option>Cu mic dejun</option>
+                        <option selected>Cu mic dejun</option>
                         <option>All inclusive</option>
                     </select>
                 </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Tabel</th>
+                <th bgcolor="darksalmon">Tabel</th>
                 <td>
-                    <table border="1" style="width:100%; border: 1px solid black;">
-                        <tr style="border: 1px solid black; background-color: blanchedalmond;">
+                    <table border="1" width="100%">
+                        <tr bgcolor="blanchedalmond ">
                             <th>short</th>
                             <th>int</th>
                             <th>long</th>
                         </tr>
-                        <tr style="border: 1px solid black; background-color: blanchedalmond;">
+                        <tr bgcolor="blanchedalmond">
                             <th>double</th>
-                            <th>flout</th>
-                            <th>_</th>
+                            <th colspan="2 ">flout</th>
                         </tr>
-                        <tr style="border: 1px solid black; background-color: blanchedalmond;">
+                        <tr bgcolor="blanchedalmond">
                             <th>char</th>
-                            <th>bool</th>
-                            <th>_</th>
+                            <th colspan="2 ">bool</th>
                         </tr>
                     </table>
                 </td>
@@ -80,82 +84,98 @@
         <br>
     </div>
 
-    <table border="1">
-        <tr style="border: 1px solid black; background-color: aquamarine;">
-            <th style="border: 1px solid black; background-color:cadetblue;" colspan="4">Limbaje de programare</th>
+    <table border="1 ">
+        <tr bgcolor="aquamarine ">
+            <th bgcolor="cadetblue " colspan="4 ">Limbaje de programare</th>
         </tr>
-        <tr style="border: 1px solid black; background-color: aquamarine;">
-            <th style="border: 1px solid black; background-color:cadetblue;">Orientate pe obiect</th>
+        <tr bgcolor="aquamarine ">
+            <th bgcolor="cadetblue ">Orientate pe obiect</th>
             <th>Java</th>
             <th>C++</th>
             <th>C#</th>
         </tr>
-        <tr style="border: 1px solid black; background-color: aquamarine;">
-            <th style="border: 1px solid black; background-color:cadetblue;">Functionale</th>
+        <tr bgcolor="aquamarine ">
+            <th bgcolor="cadetblue ">Functionale</th>
             <th>Prolog</th>
             <th>Elixir</th>
             <th>Haskell</th>
         </tr>
-        <tr style="border: 1px solid black; background-color: aquamarine;">
-            <th style="border: 1px solid black; background-color:cadetblue;">Low level</th>
+        <tr bgcolor="aquamarine ">
+            <th bgcolor="cadetblue ">Low level</th>
             <th>Machine code</th>
             <th>Assembly</th>
             <th>Ada </th>
         </tr>
+        <tr bgcolor="aquamarine ">
+            <td rowspan="3" bgcolor="cadetblue ">a</td>
+            <td>b</td>
+            <td>c</td>
+            <td>d</td>
+        </tr>
+        <tr bgcolor="aquamarine ">
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
     </table>
 
-    <h2 style="margin-left: 150px; "> Create an account </h2>
-    <div style="display:flex; ">
-        <div style="width: 1000px; ">
-            <form action="/action_page.php" method="get">
-                <div>
-                    <label>Email :</label>
-                    <input type="text"> <br>
 
-                    <label>Parol&#259; :</label>
-                    <input type="password"> <br>
 
-                    <p>Sex :</p>
-                    <input type="radio" name="sex " id="barbat">
-                    <label for="barbat">b&#259;rbat</label>
-                    <input type="radio" name="sex " id="femeie">
-                    <label for="femeie">femeie</label> <br>
+    <div>
+        <br>
+        <div>
+            <fieldset>
+                <legend> Create an account </legend>
+                <form action="/action_page.php " method="get">
+                    <div>
+                        <label>Email :</label>
+                        <input type="text"> <br>
 
-                    <p>Animalul preferat:</p>
-                    <input type="checkbox" name="animal" id="pisica">
-                    <label for="pisica">pisic&#259;</label>
-                    <input type="checkbox" name="animal" id="caine">
-                    <label for="caine">c&#xE2;ine</label>
-                    <input type="checkbox" name="animal" id="soarece">
-                    <label for="soarece"> &#351;oarece</label>
-                    <br>
+                        <label>Parol&#259; :</label>
+                        <input type="password "> <br>
 
-                    <select>
-                        <option>Cat1</option>
-                        <option>Cat2</option>
-                        <option>Cat3</option>
-                        <option>Cat4</option>
-                    </select>
+                        <p>Sex :</p>
+                        <input type="radiO" name="sex" id="barbat">
+                        <label for="barbat">b&#259;rbat</label>
+                        <input type="radio" name="sex" id="femeie">
+                        <label for="femeie">femeie</label> <br>
 
-                    <br>
-                    <input type="image " src="https://i.pinimg.com/736x/63/18/67/631867625f402e8711e40e9c24d30a6e.jpg ">
-                    <br>
-                    <input type="submit " value="Conectare ">
-                    <input type="reset ">
-                </div>
-            </form>
+                        <p>Animalul preferat:</p>
+                        <input type="checkbox" name="animal" id="pisica" checked>
+                        <label for="pisica">pisic&#259;</label>
+                        <input type="checkbox" name="animal" id="caine">
+                        <label for="caine">c&#xE2;ine</label>
+                        <input type="checkbox" name="animal" id="soarece">
+                        <label for="soarece"> &#351;oarece</label>
+                        <br>
+
+                        <select>
+                            <option>Cat1</option>
+                            <option>Cat2</option>
+                            <option>Cat3</option>
+                            <option>Cat4</option>
+                        </select>
+
+                        <br>
+                        <input type="image" src="https://i.pinimg.com/736x/63/18/67/631867625f402e8711e40e9c24d30a6e.jpg">
+                        <br>
+                        <input type="submit" value="Conectare">
+                        <input type="reset">
+                    </div>
+                </form>
+            </fieldset>
         </div>
         <div>
             &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         </div>
-        <div style="width: 500px;">
-            <img src="https://services.meteored.com/img/article/-por-que-el-mar-es-azul--9441-2.jpg " alt=" text pentru imagine " width=500 height=500>
+        <div>
+            <img src="https://services.meteored.com/img/article/-por-que-el-mar-es-azul--9441-2.jpg" alt=" text pentru imagine " width=500 height=500>
             <p>&nbsp &#354;ap &#258;sta &#351;i &icirc;nalt </p>
             <h3>Liste</h3>
             <ol>
                 <li>
                     Fruits
-                    <ul style="list-style-type:disc ">
+                    <ul>
                         <li>Apple</li>
                         <li>Orange</li>
                         <li>Grapes</li>
@@ -171,8 +191,8 @@
                 </li>
             </ol>
         </div>
-        <div style="width: 40% ">
-            <img src="https://cdn.britannica.com/39/7139-050-A88818BB/Himalayan-chocolate-point.jpg" alt=" Cat picture ">
+        <div>
+            <img src="https://cdn.britannica.com/39/7139-050-A88818BB/Himalayan-chocolate-point.jpg " alt=" Cat picture ">
             <ol>
                 <li>Cat0</li>
                 <li>Cat1</li>
@@ -188,6 +208,12 @@
             </ol>
         </div>
     </div>
+
+    <p>
+        <a href="https://www.w3schools.com/tags/att_a_target.asp " target="_blank "> link la w3 </a> hi
+        <br>
+        <button disabled> click </button>
+    </p>
 </body>
 
 </html>
