--- a/an2/Semestrul2/Web/Lab1/Tema/html5.html
+++ b/an2/Semestrul2/Web/Lab1/Tema/html5.html
@@ -6,66 +6,66 @@
     <meta charset="UTF-8">
 </head>
 
-<body style="background-color:#99d6ff">
-    <h1 style="text-align: center;  color: #a202ff"> <strong> Formular </strong> </h1>
+<body>
+    <h1> <strong> Formular </strong> </h1>
     <div>
-        <div style="margin: auto;">
+        <div>
             <textarea style="border: 5px solid; text-align: center;  color: #a202ff" rows="7" cols="100" readonly>
             The .NET Framework (pronounced as "dot net") is a proprietary software framework developed by Microsoft that runs primarily on Microsoft Windows. It was the predominant implementation of the Common Language Infrastructure (CLI) until being superseded by the cross-platform .NET project. It includes a large class library called Framework Class Library (FCL) and provides language interoperability (each language can use code written in other languages) across several programming languages.
             </textarea>
         </div>
-        <table style="width:100%; border: 1px solid black;">
-            <tr style="border: 1px solid black; background-color: blanchedalmond;">
-                <th style="border: 1px solid black;" colspan="4">Pachet</th>
+        <table>
+            <tr>
+                <th colspan="4">Pachet</th>
             </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon">Nume</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Data</th>
-                <td style="border: 1px solid black;"> <input type="date"> </td>
+            <tr>
+                <th>Nume</th>
+                <td> <input type="text"> </td>
+                <th>Data</th>
+                <td> <input type="date"> </td>
             </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon">Email</th>
-                <td style="border: 1px solid black;"> <input type="email"> </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Varsta</th>
-                <td style="border: 1px solid black;"> <input type="number"> </td>
+            <tr>
+                <th>Email</th>
+                <td> <input type="email" maxlength="15"> </td>
+                <th>Varsta</th>
+                <td> <input type="number" step="2"> </td>
             </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon">Oras Plecare</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Ora Plecare</th>
-                <td style="border: 1px solid black;"> <input type="time"> </td>
+            <tr>
+                <th>Oras Plecare</th>
+                <td> <input type="text"> </td>
+                <th>Ora Plecare</th>
+                <td> <input type="time"> </td>
             </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon">Oras Destinatie</th>
-                <td style="border: 1px solid black;"> <input type="text"> </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Ora Aterizare</th>
-                <td style="border: 1px solid black;"> <input type="time"> </td>
+            <tr>
+                <th>Oras Destinatie</th>
+                <td> <input type="text"> </td>
+                <th>Ora Aterizare</th>
+                <td> <input type="time"> </td>
             </tr>
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black; background-color:darksalmon">Ce fel de rezervare</th>
-                <td style="border: 1px solid black;">
+            <tr>
+                <th>Ce fel de rezervare</th>
+                <td>
                     <select>
                         <option>Default</option>
-                        <option>Cu mic dejun</option>
+                        <option selected>Cu mic dejun</option>
                         <option>All inclusive</option>
                     </select>
                 </td>
-                <th style="border: 1px solid black; background-color:darksalmon">Tabel</th>
-                <td style="border: 1px solid black;">
-                    <table style="width:100%; border: 1px solid black;">
-                        <tr style="border: 1px solid black; background-color: blanchedalmond;">
-                            <th style="border: 1px solid black;">short</th>
-                            <th style="border: 1px solid black;">int</th>
-                            <th style="border: 1px solid black;">long</th>
+                <th>Tabel</th>
+                <td>
+                    <table>
+                        <tr>
+                            <th>short</th>
+                            <th>int</th>
+                            <th>long</th>
                         </tr>
-                        <tr style="border: 1px solid black; background-color: blanchedalmond;">
-                            <th style="border: 1px solid black;">double</th>
-                            <th style="border: 1px solid black;" colspan="2">flout</th>
+                        <tr>
+                            <th>double</th>
+                            <th colspan="2">flout</th>
                         </tr>
-                        <tr style="border: 1px solid black; background-color: blanchedalmond;">
-                            <th style="border: 1px solid black;">char</th>
-                            <th style="border: 1px solid black;" colspan="2">bool</th>
+                        <tr>
+                            <th>char</th>
+                            <th colspan="2">bool</th>
                         </tr>
                     </table>
                 </td>
@@ -74,36 +74,36 @@
     </div>
 
     <br>
-    <hr style="color: red;">
+    <hr>
     <br>
 
-    <table style="width:100%; border: 1px solid black;">
-        <tr style="border: 1px solid black; background-color:aquamarine;">
-            <th style="border: 1px solid black; background-color:cadetblue;" colspan="4">Limbaje de programare</th>
+    <table>
+        <tr>
+            <th colspan="4">Limbaje de programare</th>
         </tr>
-        <tr style="border: 1px solid black; background-color:aquamarine;">
-            <th style="border: 1px solid black; background-color:cadetblue;">Orientate pe obiect</th>
-            <th style="border: 1px solid black;">Java</th>
-            <th style="border: 1px solid black;">C++</th>
-            <th style="border: 1px solid black;">C#</th>
+        <tr>
+            <th>Orientate pe obiect</th>
+            <th>Java</th>
+            <th>C++</th>
+            <th>C#</th>
         </tr>
-        <tr style="border: 1px solid black; background-color: aquamarine;">
-            <th style="border: 1px solid black; background-color:cadetblue;">Functionale</th>
-            <th style="border: 1px solid black;">Prolog</th>
-            <th style="border: 1px solid black;">Elixir</th>
-            <th style="border: 1px solid black;">Haskell</th>
+        <tr>
+            <th>Functionale</th>
+            <th>Prolog</th>
+            <th>Elixir</th>
+            <th>Haskell</th>
         </tr>
-        <tr style="border: 1px solid black; background-color: aquamarine;">
-            <th style="border: 1px solid black; background-color:cadetblue;">Low level</th>
-            <th style="border: 1px solid black;">Machine code</th>
-            <th style="border: 1px solid black;">Assembly</th>
-            <th style="border: 1px solid black;">Ada </th>
+        <tr>
+            <th>Low level</th>
+            <th>Machine code</th>
+            <th>Assembly</th>
+            <th>Ada </th>
         </tr>
     </table>
 
-    <h2 style="margin-left: 150px;"> Create an account </h2>
-    <div style="display:flex;">
-        <div style="width: 1000px;">
+    <h2> Create an account </h2>
+    <div>
+        <div>
             <form>
                 <label>Email :</label>
                 <input type="email"> <br>
@@ -118,7 +118,7 @@
                 <label for="femeie">femeie</label> <br>
 
                 <p>Animalul preferat:</p>
-                <input type="checkbox" name="animal" id="pisic&#259;">
+                <input type="checkbox" name="animal" id="pisic&#259;" checked>
                 <label for="pisic&#259;">pisic&#259;</label>
                 <input type="checkbox" name="animal" id="c&#xE2;ine">
                 <label for="c&#xE2;ine">c&#xE2;ine</label>
@@ -143,14 +143,14 @@
         <div>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </div>
-        <div style="width: 500px;">
+        <div>
             <img src="https://services.meteored.com/img/article/-por-que-el-mar-es-azul--9441-2.jpg" alt=" text pentru imagine " width=500 height=500>
             <p>&nbsp; &#354;ap &#258;sta &#351;i &icirc;nalt </p>
             <h3>Liste</h3>
             <ol type="I">
                 <li>
                     Fruits
-                    <ul style="list-style-type:disc">
+                    <ul>
                         <li>Apple</li>
                         <li>Orange</li>
                         <li>Grapes</li>
@@ -166,7 +166,7 @@
                 </li>
             </ol>
         </div>
-        <div style="width: 40%">
+        <div>
             <img src="https://media.istockphoto.com/id/1322123064/photo/portrait-of-an-adorable-white-cat-in-sunglasses-and-an-shirt-lies-on-a-fabric-hammock.jpg?s=612x612&w=0&k=20&c=-G6l2c4jNI0y4cenh-t3qxvIQzVCOqOYZNvrRA7ZU5o=" alt="Cat picture">
             <ol type="a">
                 <li>Cat0</li>
@@ -190,6 +190,9 @@
       Your browser does not support the audio element.
     </audio>
 
+    <a href="https://www.w3schools.com/tags/att_a_target.asp" target="_blank"> link la w3 </a>
+    <p>hi <br> </p>
+    <button disabled> click </button>
 </body>
 
 </html>
