--- a/an2/Semestrul2/Web/Lab2/Tema/7/7.html
+++ b/an2/Semestrul2/Web/Lab2/Tema/7/7.html
@@ -11,7 +11,7 @@
             Pizza Ipsum is a lorem ipsum generator for a very delicious</li>
         <li class="bob">Pizza Ipsum is a lorem ipsum generator for a very delicious Pizza Ipsum ipsum generat very deliciousPizza Ipsum is a lorem ipsum generator for a very delicious</li>
         <li class="alice">
-            Pizza Ipsum is a lorem ipsum generator for a very delicious delicious</li>
+            Pizza Ipsum is a lorem ipsum generator for a very delicious</li>
     </ul>
 </body>
 
