--- a/an2/Semestrul2/Web/Lab2/Tema/1/1.html
+++ b/an2/Semestrul2/Web/Lab2/Tema/1/1.html
@@ -34,9 +34,8 @@
     <div id="main">
         <div id="text">
             Pizza Ipsum is a lorem ipsum generator for a very delicious Lorem Ipsum.There are various other Ipsum’s out there including two of my favorites: Bacon Ipsum, and Cupcake Ipsum. These are all fun spinoffs of Lorem Ipsum which is dummy text used as mock-up
-            text for publishing, and in more recent history for designing layouts for web sites and blogs.
-            <!-- There are various other Ipsum’s out there including two of my favorites: Bacon Ipsum, and Cupcake Ipsum. These are all fun spinoffs of Lorem Ipsum which is dummy text used as mock-up
-            text for publishing, and in more recent history for designing layouts for web sites and blogs.-->
+            text for publishing, and in more recent history for designing layouts for web sites and blogs. There are various other Ipsum’s out there including two of my favorites: Bacon Ipsum, and Cupcake Ipsum. These are all fun spinoffs of Lorem Ipsum
+            which is dummy text used as mock-up text for publishing, and in more recent history for designing layouts for web sites and blogs.
         </div>
         <div id="img">
             <img src="pizza.jpg" alt="pizza img" style="width: 100%;">
