--- a/an2/Semestrul2/Web/Lab2/Tema/2/2.html
+++ b/an2/Semestrul2/Web/Lab2/Tema/2/2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="vertical.css">
+    <link rel="stylesheet" href="orizontal.css">
 </head>
 
 <body style="height: 100%; margin: 0;">
