--- a/an2/Semestrul2/Web/Lab2/Tema/6/6.html
+++ b/an2/Semestrul2/Web/Lab2/Tema/6/6.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-<title>Exemplu input</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="6.css">
+
+<head>
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+    <title>Exemplu input</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="6.css">
+</head>
 
 <body style="background-color: aquamarine;">
     <form>
